package com.nashss.se.remindme.dynamodb;

public class UserDao {
}
