@startuml Class Diagram
class CreateTaskManagerActivity
class CreateTaskManagerRequest
class CreateTaskManagerResult
class GetTaskManagerActivity
class GetTaskManagerRequest
class GetTaskManagerResult
class AddTaskActivity
class AddTaskRequest
class AddTaskResult
class GetTaskActivity 
class GetTaskRequest 
class GetTaskResult 
class DeleteTaskActivity
class DeleteTaskRequest
class DeleteTaskResult
class CreateUserActivity
class CreateUserRequest
class CreateUserResult
class GetUserActivity
class GetUserRequest
class GetUserResult
class TaskManagerDao
class TaskDao 
class UserDao 
class TaskManagerModel
class TaskModel 
class UserModel

TaskManagerDao --> AddTaskActivity
TaskManagerDao --> CreateTaskManagerActivity
TaskManagerDao --> GetTaskManagerActivity
TaskManagerDao --> DeleteTaskActivity
TaskDao --> AddTaskActivity
TaskDao --> DeleteTaskActivity
UserDao --> CreateUserActivity
UserDao --> GetUserActivity


class CreateUserActivity {
    - log : Logger
    - userDao : UserDao
    + CreateUserResult : handleRequest(CreateUserRequest request)
}

class CreateTaskManagerActivity {
    - log : Logger
    - taskManagerDao : TaskManagerDao
    + CreateTaskManagerResult : handleRequest(CreateTaskManagerRequest request)
}

class AddTaskActivity {
    - log : Logger
    - taskManagerDao : TaskManagerDao
    - taskDao : TaskDao
    + AddTaskResult : handleRequest(AddTaskRequest request)
}

class GetTaskManagerActivity {
    - log : Logger
    - taskManagerDao : TaskManagerDao
    + GetTaskManagerResult : handleRequest(GetTaskManagerRequest request)
}

class DeleteTaskActivity {
    - log : Logger
    - taskManagerDao : TaskManagerDao
    - taskDao : TaskDao
    + DeleteTaskResult : handleRequest(DeleteTaskRequest request)
}

class GetUserActivity {
    - log : Logger
    - userDao : UserDao
    + GetUserResult : handleRequest(GetUserRequest request)
}

class TaskManagerModel {
    - @DynamoDBHashKey id : final String
    - taskManagerName : String
    - tasks : Set 
}

class TaskModel {
    - @DynamoDBHashKey id : final String
    - taskName : String
    - taskDueDate : LocalDateTime
}

class UserModel {
    - @DynamoDBHashKey id : final String
    - name : String
    - isOwner : Boolean
    - phoneNumber : String
}


@enduml

